force-app/main/default/objects/Legal_Contract_Lines__c/Legal_Contract_Lines__c.object-meta.xml
<CustomObject>
    <label>Legal Contract Lines</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Legal Contract Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>