force-app/main/default/objects/Legal_Contract_Lines__c/fields/Inventory_Level_UOM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Level_UOM__c</fullName>
    <label>Inventory Level UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2T Sets sold by the Thousand</fullName>
            </value>
            <value>
                <fullName>BA Bale</fullName>
            </value>
            <value>
                <fullName>BD Bundle</fullName>
            </value>
            <value>
                <fullName>BG Bag</fullName>
            </value>
            <value>
                <fullName>BK BUCKET</fullName>
            </value>
            <value>
                <fullName>BO Bottle</fullName>
            </value>
            <value>
                <fullName>BX Box</fullName>
            </value>
            <value>
                <fullName>C Hundred</fullName>
            </value>
            <value>
                <fullName>CB Cabinet</fullName>
            </value>
            <value>
                <fullName>CF Cubic</fullName>
            </value>
            <value>
                <fullName>CH Container</fullName>
            </value>
            <value>
                <fullName>CN Can PL</fullName>
            </value>
            <value>
                <fullName>CP Crate</fullName>
            </value>
            <value>
                <fullName>CQ Cartridge</fullName>
            </value>
            <value>
                <fullName>CS Case</fullName>
            </value>
            <value>
                <fullName>CT Carton</fullName>
            </value>
            <value>
                <fullName>CW Hundred</fullName>
            </value>
            <value>
                <fullName>CX Coil</fullName>
            </value>
            <value>
                <fullName>DI Dispenser</fullName>
            </value>
            <value>
                <fullName>DP Dozen</fullName>
            </value>
            <value>
                <fullName>DR Drum</fullName>
            </value>
            <value>
                <fullName>DS Display</fullName>
            </value>
            <value>
                <fullName>DZ Dozen</fullName>
            </value>
            <value>
                <fullName>EA Each</fullName>
            </value>
            <value>
                <fullName>EV Envelope</fullName>
            </value>
            <value>
                <fullName>FT Foot</fullName>
            </value>
            <value>
                <fullName>GA Gallon</fullName>
            </value>
            <value>
                <fullName>GS Gross</fullName>
            </value>
            <value>
                <fullName>HU Hundred</fullName>
            </value>
            <value>
                <fullName>IN Inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>