force-app/main/default/objects/Legal_Contract_Lines__c/fields/Legal_Contract__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contract__c</fullName>
    <label>Legal Contract</label>
    <referenceTo>Legal_Contract__c</referenceTo>
    <relationshipLabel>Legal Contract Lines</relationshipLabel>
    <relationshipName>Legal_Contract_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>