force-app/main/default/objects/Legal_Contract_Lines__c/fields/Maximum_Inventory_Level__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Inventory_Level__c</fullName>
    <label>Maximum Inventory Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>