force-app/main/default/objects/Legal_Contract_Lines__c/fields/Projected_Monthly_Usage__c.field-meta.xml
<CustomField>
    <fullName>Projected_Monthly_Usage__c</fullName>
    <label>Projected Monthly Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>