force-app/main/default/objects/Legal_Contract_Lines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Legal_Contract__c</columns>
    <columns>Product_Number__c</columns>
    <columns>Product_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>